--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link href="styles.css" rel="stylesheet">
-    <title>Your personal notifications feed</title>
-  </head>
-  <body>
-  <div class="main-text">
-    <div class="feed">
-      <h3 id="message">&#128488; Praesent sit amet tortor non enim vulputate porta. Aliquam turpis purus. Vestibulum ante ipsum primis.
-        /// <a href="https://google.com" target="_blank">google.com</a> ///
-      </h3>
-    </div>
-    <button id="hideButton" class="bg-blue-500 hover:bg-blue-700 text-white font-xs py-2 px-2 rounded">Mark as read</button>
+<head>
+  <meta charset="UTF-8">
+  <link href="styles.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <title>Your personal notifications feed</title>
+</head>
+<body id="app">
+<div class="main-text">
+  <div class="feed">
+    <h3 id="message">&#128488; Praesent sit amet tortor non enim vulputate porta. Aliquam turpis purus. Vestibulum ante ipsum primis.
+      /// <a href="https://google.com" target="_blank">google.com</a> ///
+    </h3>
   </div>
+  <div class="flex text-white font-xs h-8 gap-4">
+    <button id="loginButton" class="bg-blue-500 hover:bg-blue-700 py-2 px-2 rounded">Login via Google</button>
+    <button id="hideButton" class="bg-blue-500 hover:bg-blue-700 py-2 px-2 rounded">Mark as read</button>
+  </div>
+</div>
 
-  <script src="./renderer.js"></script>
-  </body>
+<script src="./renderer.js"></script>
+</body>
 </html>
