--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="main-text">
   <div class="feed">
     <h3 id="message">&#128488; Praesent sit amet tortor non enim vulputate porta. Aliquam turpis purus. Vestibulum ante ipsum primis.
-      /// <a id="link" href="https://google.com" target="_blank">google.com</a> ///
+      /// <a id="link" href="https://staging-bo.tmgbo.com/" target="_blank">Login to Staging</a> ///
     </h3>
   </div>
   <div class="flex text-white font-xs h-8 gap-4">
