--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 <div class="main-text">
   <div class="feed">
     /// <a id="link" href="https://staging-bo.tmgbo.com/" target="_blank"> Login to Staging </a> ///
-    <h3 id="message">&#128488; Praesent sit amet tortor non enim vulputate porta. Aliquam turpis purus. Vestibulum ante ipsum primis.
-    </h3>
+    <div id="messagesContainer" class="messages-container">
+
+    </div>
   </div>
   <div class="flex text-white font-xs h-8 gap-4">
-    <button id="loginButton" class="bg-blue-500 hover:bg-blue-700 py-2 px-2 rounded">Login via Google</button>
-    <button id="hideButton" class="bg-blue-500 hover:bg-blue-700 py-2 px-2 rounded">Mark as read</button>
+    <button id="hideButton" class="bg-blue-500 hover:bg-blue-700 py-2 px-2 rounded">
+      <img src="assets/read.png" alt="read" class="w-4 h-4"/>
+    </button>
+    <button id="loginButton" class="bg-blue-500 hover:bg-blue-700 py-2 px-2 rounded"><img src="assets/gear.png" alt="read" class="w-4 h-4"/></button>
   </div>
 </div>
 
