--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
 </head>
 <body id="app">
 <div class="main-text">
+  /// <a id="link" href="https://staging-bo.tmgbo.com/" target="_blank"> Login to Staging </a> ///
   <div class="feed">
-    /// <a id="link" href="https://staging-bo.tmgbo.com/" target="_blank"> Login to Staging </a> ///
-    <div id="messagesContainer" class="messages-container">
-
-    </div>
+    <div id="messagesContainer" class="messages-container"></div>
   </div>
-  <div class="flex text-white font-xs h-8 gap-4">
-    <button id="hideButton" class="bg-blue-500 hover:bg-blue-700 py-2 px-2 rounded">
+  <div class="flex gap-2">
+    <button id="hideButton">
       <img src="assets/read.png" alt="read" class="w-4 h-4"/>
     </button>
-    <button id="loginButton" class="bg-blue-500 hover:bg-blue-700 py-2 px-2 rounded"><img src="assets/gear.png" alt="read" class="w-4 h-4"/></button>
+    <button id="loginButton"><img src="assets/gear.png" alt="read" class="w-4 h-4"/></button>
   </div>
 </div>
 
